Modify:the formats and ways to send the required information